<resources>
    <string name="app_name">MensajeriaIF</string>

    <string name="logoIF">Logo del IES Islas Filipinas</string>
    <string name="newMsg">Nuevo mensaje</string>
    <string name="historial">Historial</string>
    <string name="about">Acerca de</string>

    <string name="selecContacto">Selecciona el contacto:</string>
    <string name="tipoMsg">Enviar mediante:</string>

    <string name="empresa">Nombre de la empresa</string>
    <string name="particular">Persona de contacto</string>
    <string name="inputTelefono">Telefono de contacto</string>
    <string name="inputEmail">E-Mail de contacto</string>
    <string name="aceptar">Aceptar</string>

    <!-- Fragment detalle tags -->
    <string name="para">Para:</string>
    <string name="de">De:</string>
    <string name="asunto">Asunto:</string>
    <string name="mensaje">Mensaje:</string>

    <string name="seleccionarDestinatario">Seleccionar Destinatario</string>
    <string name="seleccionarRemitente">Seleccionar Remitente</string>

    <string name="deseaQueLeLlamen">Desea que le llamen</string>
    <string name="volveraALlamar">Volverá a llamar</string>
    <string name="paraSuInfo">Para su información</string>
    <string name="urgente">¡URGENTE!</string>
    <string name="auto">Automatizado</string>

    <string name="enviarSMS">Enviar SMS</string>
    <string name="enviarEmail">Enviar e-mail</string>


    <string name="mensajeriaIES">Aplicación de mensajería del I.E.S. Islas Filipinas. ©</string>
    <string name="descripcionlogo">Logo del instituto Islas Filipinas.</string>
    <string name="textoTocho">Esta aplicación ha sido desarrollada por Carlos García Corpas y Javier Sánchez Gómez con fines didácticos. <br />Sobre nosotros: Somos dos
    estudiantes de segundo año del grado de formación profesional de Desarrollo de Aplicaciones Multiplataforma. Hemos desarrollado como parte de nuestra formación esta aplicación,
    emulando digitalmente uno de los servicios de la consejería del instituto como es el informar a los docentes y demás personal del instituto sobre cuando les llega una llamada o aviso.<br />
    El servicio actualmente es bastante precario ya que se hace a papel, y esto propicia las pérdidas y las equivocaciones. Siendo así, y bajo la recomendación de nuestro docente, Felipe
    Cabeza Leiva, nos decidimos a desarrollar esta aplicación.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_acerca_de">AcercaDe</string>

</resources>
