<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.islasf.android.grupo5.mensajeriaies_javier_carlos.DetalleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/para"
                android:paddingLeft="5dp"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/btnDestinatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionarDestinatario"
                android:onClick="destinatarioListener" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:paddingLeft="5dp"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnRemitente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionarRemitente" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/rgOpciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rbtnDesea"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deseaQueLeLlamen"
                            android:layout_weight="1"/>

                        <CheckBox
                            android:id="@+id/cbInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/paraSuInfo"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rbtnVolvera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/volveraALlamar"
                            android:layout_weight="1"/>

                        <CheckBox
                            android:id="@+id/cbUrgente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/urgente"
                            android:layout_weight="1"/>

                    </LinearLayout>
                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asunto"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/etAsunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:ems="10"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnEnviarSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviarSMS"/>

                <Button
                    android:id="@+id/btnEnviarEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviarEmail"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
