<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.islasf.android.grupo5.mensajeriaies_javier_carlos.MainActivity"
    android:orientation="vertical"
    android:layout_weight="1">

    <ImageView
        android:contentDescription="@string/logoIF"
        android:layout_width="222dp"
        app:srcCompat="@drawable/logoif"
        android:id="@+id/imglogoif"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:text="@string/newMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnNuevo"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

        <Button
            android:text="@string/historial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnHistorial"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

        <Button
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAbout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="diohmiowil"/>
    </LinearLayout>

 </LinearLayout>
