<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.islasf.android.grupo5.mensajeriaies_javier_carlos.RemitenteFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/inputTelefono"
                    android:id="@+id/etTelefono"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_telefono"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/inputEmail"
                    android:id="@+id/etEmail"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/particular"
                    android:drawableStart="@drawable/ic_persona"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:id="@+id/etPersona"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/empresa"
                    android:drawableStart="@drawable/ic_empresa"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:id="@+id/etEmpresa"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_weight="0.2">

                <Button
                    android:text="@string/aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAceptar"
                    android:layout_gravity="end" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
