<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageButton
            android:layout_width="82dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/letrasif"
            android:id="@+id/imageButton"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/descripcionlogo"
            style="@style/Widget.AppCompat.ImageButton"
            android:background="?android:selectableItemBackground"
            android:layout_weight="0.04"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"/>

        <TextView
            android:text="@string/mensajeriaIES"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="normal|bold"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
            android:text="@string/textoTocho"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvTextoTocho"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>